--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
     <groupId>Store</groupId>
     <artifactId>store</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
     <properties>
         <spring.securiry>3.2.0.RELEASE</spring.securiry>
     </properties>
@@ -100,6 +101,27 @@
             <version>${spring.securiry}</version>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
 
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.3</version>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.6</version>
+                <configuration>
+                    <failOnMissingWebXml>false</failOnMissingWebXml>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
